src/css/seed.less
@import "seattletimes";

.interactive {
  max-width: 630px;
}

.bar-stacks {
  .bar-container {
    clear: both;
    margin: 10px 0;

    h2 {
      margin: 0;
      color: @df-dark-gray;
      text-transform: uppercase;
      font-size: 14px;
      cursor: pointer;
    }

    &.backgrounded {
      .bar-chunk:not(.active) {
        opacity: .5;
        filter: ~"desaturate(50%)";
      }
      h2 {
        color: @df-middle-gray;
        font-weight: normal;

        &::after {
          content: " (click to return)";
        }

        &:hover, &:focus {
          color: black;
        }
      }
    }
  }

  .bar {
    transform-origin: 0 0;

    &::after {
      display: block;
      content: "";
      clear: both;
    }

    &.animate {
      transition: all .3s ease-in-out;
    }
  }

  .bar-chunk {
    height: 20px;
    background: @df-light-gray;
    float: left;
    cursor: pointer;
    line-height: 20px;
    text-align: center;
    position: relative;

    &.active {
      box-shadow: 0 0 0 2px black;
      z-index: 999;
    }

    &[data-terminates="false"] {
      &::before {
        content: "+";
        font-weight: bold;
        color: white;
      }
    }

    &[data-terminates="true"] {
      cursor: default;
    }
  }
}

.bar-chatter {
  .dot {
    width: .7em;
    height: .7em;
    border-radius: 100%;
    display: inline-block;
  }

  ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    font-size: 15px;
  }

  .note {

  }

  .cash {
    font-size: 15px;
    margin: 0;
  }
}

.makeLevel(@level: level-1; @color: black) {
  .@{level} {
    .item-0 { background: darken(@color, 30%) }
    .item-1 { background: darken(@color, 20%) }
    .item-2 { background: darken(@color, 10%) }
    .item-3 { background: @color }
    .item-4 { background: lighten(@color, 10%) }
  }
}

.makeLevel(level-0, @st-dark-red);
.makeLevel(level-1, @st-dark-orange);
.makeLevel(level-2, @st-dark-green);
.makeLevel(level-3, @st-dark-blue);
.makeLevel(level-4, @st-dark-purple);

